# multilayer-perceptron

./: .gitignore  .pylintrc  README.md  config.pkl  cspell.json  findseed.py  mlp.py  model.default.pkl  model.example.pkl  pyproject.toml  requirements.txt
data/: test.csv  train.csv
docs/: usage.md
mlp/: __init__.py  predict.py  split.py  train.py
mlp/logger/: __init__.py
mlp/model/: __init__.py
mlp/model/activations/: __init__.py  activation.py  relu.py  sigmoid.py  softmax.py
mlp/model/initializers/: __init__.py  he.py  initializer.py  random.py  xavier.py  zero.py
mlp/model/layers/: __init__.py  dense.py  layer.py
mlp/model/losses/: __init__.py  binary_cross_entropy.py  categorical_cross_entropy.py  loss.py
mlp/model/metrics/: __init__.py  accuracy.py  data.py  f1_score.py  loss.py  metrics.py  precision.py  recall.py
mlp/model/models/: __init__.py  batch.py  mini_batch.py  model.py
mlp/model/optimizers/: __init__.py  adam.py  gradient_descent.py  optimizer.py
mlp/model/plots/: __init__.py  plot.py
mlp/model/preprocessing/: __init__.py  binarize.py  normalize.py
mlp/model/regularizers/: __init__.py  l1.py  l2.py  regularizer.py
mlp/model/training/: __init__.py  early_stopping.py
mlp/parser/: __init__.py  file.py
mlp/parser/arguments/: __init__.py  predict.py  split.py  train.py
mlp/parser/file/: __init__.py  dataset.py  metrics.py
pkl/: AppConfig.pkl
pkl/model/: Activations.pkl  Initializers.pkl  Layers.pkl  Models.pkl  Optimizers.pkl  Regularizers.pkl  Training.pkl
tests/: test_parser_arguments.py  test_parser_files.py
(+10 files in other folders)
